Truncated the description text in the donation table at 50 characters and added an ellipsis after the text if it is truncated. Prevents description td from pushing table row height to excessive height with long descriptions:

--- a/client/src/global.css
+++ b/client/src/global.css
@@ -192,7 +192,7 @@ form label:not(> span) {
 @media (min-width: 1200px) {
 	.container, .container-lg, .container-md, .container-sm, .container-xl {
     /* max-width: 1200px; */
-		max-width: 100vw;
+		max-width: 98vw;
 	}
 }
 
